<resources>
    <string name="app_name">weatherApp</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings for Main Activity -->
    <string name="search">Search</string>
    <string name="Info1">Input must be entered as: "City, Country". Except the country must be a 2-letter abbreviation.</string>
    <string name="Info2">For Example: Toronto, Canada would be Toronto, CA (not case-sensitive)</string>
    <string name="exampleLocation">Saint John, CA</string>
    <string name="name">Developed by: Jordan Carter</string>

    <!-- Strings for Weather Activity -->
    <string name="precipitation">Precipitation</string>
    <string name="precipitationExample">10mm</string>
    <string name="humidity">Humidity</string>
    <string name="humidityExample">10%</string>
    <string name="wind">Wind</string>
    <string name="windExample">10 km/h</string>
    <string name="windtype">Wind Type</string>
    <string name="windtypeExample">N Calm Breeze</string>
    <string name="feelslike">Feels Like</string>
    <string name="feelslikeExample">10 °C or 10 °F</string>
    <string name="pressure">Pressure</string>
    <string name="pressureExample">10 kPa</string>
    <string name="visibility">Visibility</string>
    <string name="visibilityExample">10 km</string>
</resources>